code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__config_general_tab.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 21)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── 配 置  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   通 用     提 供 商     议 题                                                 │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 配 置                                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  2 more above                                                           │             
            │  内 存 诊 断                                                         关 闭  + │             
            │  自 动 更 新                                                         最 新    │             
            │  以 差 异 显 示  Git 更 改                                              关 闭  + │             
            │  语 言                                                             中 文    │             
            │> 状 态 栏 风 格                                                       简 洁    │             
            │  9 more below                                                           │             
  ──────────│  Enter change · r reset · Tab tabs · / search · Esc close               │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
