code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__config_providers_sections.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 34)"
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 配 置  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   通 用     提 供 商     议 题     网 络                                         │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 配 置                                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  订 阅  ───────────────────────────────────────────────────────────────── │             
            │  ChatGPT                                                                │             
            │> Kimi                                                                   │             
            │  BigModel                                                               │             
            │  Z.AI                                                                   │             
            │  Super Grok                                                             │             
            │                                                                         │             
            │  API ────────────────────────────────────────────────────────────────── │             
            │  OpenAI                                                                 │             
            │  Kimi                                                                   │             
            │  Z.AI                                                                   │             
            │  BigModel                                                               │             
            │  Ollama                                                                 │             
            │  xAI                                                                    │             
            │  Google                                                                 │             
            │  新 建 自 定 义 提 供 商                                                        │             
            │                                                                         │             
            │                                                                         │             
            │  Enter/Space 更 改  · Tab 标 签 页  · / 搜 索  · Esc 关 闭                       │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型
