code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__dictation_model_downloading_zh.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                           [— / —] [仪 表 盘 ]  
                                                                                
> /voice                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  听 写  · 正 在 下 载  encoder.onnx： 2.0 MiB · ctrl+c 停 止
