code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__hooks_detail.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
        ┌── Hooks › user:hook:review ──────────────────────────────[✗]─┐        
        │                                                              │        
        │  Event:       PreToolUse                                     │        
        │  Enablement:  disabled                                       │        
        │  Source file: /profile/config.toml                           │        
        │  Tool names:  ["exec_command"]                               │        
        │  Program:     review-hook                                    │        
        │  Arguments:   ["--check"]                                    │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │> Edit configuration                                          │        
  ──────│  Ask Ash to configure                                        │──────  
  > Buil│  Enter confirm · PgUp/PgDn scroll · r refresh · Esc return   │        
  ──────└──────────────────────────────────────────────────────────────┘model
