code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__hooks_event_picker.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
        ┌── Hooks › PreToolUse ────────────────────────────────────[✗]─┐        
        │                                                              │        
        │  Configure Hooks                                             │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ Search Hooks                                            │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │> user:hook:review  ·  disabled  ·  /profile/config.toml      │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│                                                              │──────  
  > Buil│  Enter confirm · / search · r refresh · Esc return           │        
  ──────└──────────────────────────────────────────────────────────────┘model
