code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__hooks_fullscreen.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
        ┌── Extensions ────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   Skills    Marketplace    MCP    Hooks    Plugins           │        
        │                                                              │        
        │> Add Hook                                                    │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ Search Hooks                                            │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │  No Hooks found                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│                                                              │──────  
  > keep│  Enter confirm · Tab tabs · / search · Esc close             │        
  ──────└──────────────────────────────────────────────────────────────┘model
